<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/recent_words"
            android:icon="@drawable/ic_recent"
            android:title="@string/menu_recent_words" />
        <item
            android:id="@+id/archive_words"
            android:icon="@drawable/ic_word"
            android:title="@string/menu_words" />
        <item
            android:id="@+id/watch"
            android:icon="@drawable/ic_watch"
            android:title="@string/menu_turn_tap_watching_on_off" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/test"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_test" />


    </group>


</menu>
