<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.changfeng.taptapword.SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingTop="20dp"
                android:longClickable="false"
                android:text="@string/title_reset_preferences"
                android:textColor="#4caf50"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4caf50" />

            <TextView
                android:id="@+id/reset_all_data"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/reset_all_data"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

            <TextView
                android:id="@+id/reset_all_preferences"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/reset_all_preference"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingTop="20dp"
                android:longClickable="false"
                android:text="@string/title_translate_select"
                android:textColor="#4caf50"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4caf50" />

            <CheckBox
                android:id="@+id/select_youdao_dict"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/youdao_dict"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

            <CheckBox
                android:id="@+id/select_web_explain"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/web_explain"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

            <CheckBox
                android:id="@+id/select_youdao_translate"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/youdao_translate"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

            <CheckBox
                android:id="@+id/select_baidu_translate"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/baidu_translate"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1bbc9b"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="20dp"
            android:longClickable="false"
            android:text="@string/title_backup_and_restore"
            android:textColor="#4caf50"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#4caf50" />

        <TextView
            android:id="@+id/backup_data"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/backup"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1bbc9b"/>

        <TextView
            android:id="@+id/restore_data"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/restore"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1bbc9b"/>


        <TextView
            android:id="@+id/clear_backup_data"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/clear_backup_data"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1bbc9b"/>


    </LinearLayout>

</LinearLayout>
