<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/translate_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requesting_result_from_internet"/>

        <TextView
            android:id="@+id/add_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:visibility="gone"
            android:text="@string/button_add_note"/>

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:visibility="gone"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:hint="@string/hint_please_input_your_note"
            />
    </LinearLayout>



</RelativeLayout>
